# NCEPLIBS-sigio

./: CMakeLists.txt
.github/workflows/: Intel.yml  Spack.yml  main.yml
docs/: CMakeLists.txt
spack/: package.py
tests/: CMakeLists.txt  test_sigio_module.F90
